FIx: refractor some code to clean code